--- a/index.html
+++ b/index.html
@@ -4,129 +4,39 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Ofertas com descontos reais nas principais lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba. Links de afiliado seguros e atualizados." />
-  <meta property="og:title" content="Centro de Compras - Ofertas e Descontos">
+  <meta property="og:title" content="CentrodeCompra - Ofertas e Descontos">
   <meta property="og:description" content="Encontre as melhores ofertas em lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba. Links de afiliados seguros e atualizados!">
   <meta property="og:image" content="logos/logoscentrodecompras.jpeg">
   <meta property="og:url" content="https://centrodecompra.com.br/">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Centro de Compras - Ofertas e Descontos">
+  <meta name="twitter:title" content="CentrodeCompra - Ofertas e Descontos">
   <meta name="twitter:description" content="Encontre as melhores ofertas em lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba. Links de afiliados seguros e atualizados!">
   <meta name="twitter:image" content="logos/logoscentrodecompras.jpeg">
-  <title>Centro de Compras - Ofertas do Dia</title>
+  <title>CentrodeCompra - Ofertas do Dia em Amazon, Shein, Shopee e Mais</title>
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-XXXXXXXXXX');
+  </script>
+  <!-- Google AdSense -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXXXXXXXXXX" crossorigin="anonymous"></script>
+  <!-- Font Awesome -->
+  <script src="https://kit.fontawesome.com/sua-chave-aqui.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <style>
-    .modal {
-      display: none;
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0, 0, 0, 0.8);
-      z-index: 1000;
-      justify-content: center;
-      align-items: center;
-    }
-    .modal-content {
-      position: relative;
-      max-width: 90%;
-      max-height: 90%;
-      width: auto;
-      height: auto;
-    }
-    .modal-content .carrossel-imagens {
-      display: flex;
-      overflow: hidden;
-      width: 100%;
-      height: 100%;
-    }
-    .modal-content .carrossel-imagens img {
-      width: 100%;
-      height: auto;
-      object-fit: contain;
-      flex: 0 0 100%;
-      transition: transform 0.3s ease;
-    }
-    .modal-close {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      background: #FFA500;
-      color: white;
-      border: none;
-      padding: 8px 12px;
-      border-radius: 50%;
-      cursor: pointer;
-      font-size: 16px;
-    }
-    .carrossel-prev, .carrossel-next {
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-      background: rgba(0, 0, 0, 0.5);
-      color: white;
-      border: none;
-      padding: 10px;
-      cursor: pointer;
-      font-size: 18px;
-      border-radius: 4px;
-    }
-    .carrossel-prev { left: 10px; }
-    .carrossel-next { right: 10px; }
-    .carrossel-dots {
-      position: absolute;
-      bottom: 10px;
-      width: 100%;
-      text-align: center;
-    }
-    .carrossel-dot {
-      display: inline-block;
-      width: 10px;
-      height: 10px;
-      background: #ccc;
-      border-radius: 50%;
-      margin: 0 5px;
-      cursor: pointer;
-    }
-    .carrossel-dot.ativo { background: #FFA500; }
-    .error-message {
-      color: red;
-      text-align: center;
-      margin-top: 10px;
-    }
-    #paginacao {
-      text-align: center;
-      margin: 20px 0;
-    }
-    #paginacao button {
-      margin: 0 10px;
-      padding: 8px 16px;
-      background-color: #ff6200;
-      color: white;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-    #paginacao button:disabled {
-      background-color: #ccc;
-      cursor: not-allowed;
-    }
-    #paginacao span {
-      font-size: 16px;
-      margin: 0 10px;
-    }
-  </style>
 </head>
 <body>
   <header class="site-header">
     <div class="logo-container">
       <a href="javascript:void(0)">
-        <img src="logos/logoscentrodecompras.jpeg" alt="Centro de Compras" loading="lazy" id="site-logo-img" />
+        <img src="logos/logoscentrodecompras.jpeg" alt="CentrodeCompra" loading="lazy" id="site-logo-img" width="120" height="40" />
       </a>
     </div>
     <div class="header-text">
-      <h1>Centro de Compra</h1>
+      <h1>CentrodeCompra</h1>
       <p>O maior portal de ofertas do Brasil! Descubra as melhores oportunidades nos maiores sites de venda, com links diretos para sua compra.</p>
     </div>
   </header>
@@ -164,6 +74,18 @@
     <main>
       <section id="ofertas-section">
         <h2 id="ofertas-titulo">🛍️ Ofertas do Dia</h2>
+        <!-- Espaço para anúncio AdSense -->
+        <div class="ad-container">
+          <ins class="adsbygoogle"
+               style="display:block"
+               data-ad-client="ca-pub-XXXXXXXXXXXX"
+               data-ad-slot="SEU-SLOT-AQUI"
+               data-ad-format="auto"
+               data-full-width-responsive="true"></ins>
+          <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+          </script>
+        </div>
         <div class="lojas-parceiras">
           <h3>🌟 Lojas Parceiras</h3>
           <div class="grid-lojas">
@@ -171,34 +93,34 @@
               <span>Todas as Lojas</span>
             </div>
             <div class="loja" data-loja="amazon" onclick="filtrarPorLoja('amazon')" role="button" aria-label="Filtrar por Amazon">
-              <img src="logos/amazon.png" alt="Logo da Amazon" loading="lazy">
+              <img src="logos/amazon.png" alt="Logo da Amazon" loading="lazy" width="100" height="40">
               <span class="amazon">Amazon</span>
             </div>
             <div class="loja" data-loja="magalu" onclick="filtrarPorLoja('magalu')" role="button" aria-label="Filtrar por Magalu">
-              <img src="logos/magalu.png" alt="Logo da Magalu" loading="lazy">
+              <img src="logos/magalu.png" alt="Logo da Magalu" loading="lazy" width="100" height="40">
               <span class="magalu">Magalu</span>
             </div>
             <div class="loja" data-loja="shein" onclick="filtrarPorLoja('shein')" role="button" aria-label="Filtrar por Shein">
-              <img src="logos/shein.png" alt="Logo da Shein" loading="lazy">
+              <img src="logos/shein.png" alt="Logo da Shein" loading="lazy" width="100" height="40">
               <span class="shein">Shein</span>
             </div>
             <div class="loja" data-loja="shopee" onclick="filtrarPorLoja('shopee')" role="button" aria-label="Filtrar por Shopee">
-              <img src="logos/shopee.png" alt="Logo da Shopee" loading="lazy">
+              <img src="logos/shopee.png" alt="Logo da Shopee" loading="lazy" width="100" height="40">
               <span class="shopee">Shopee</span>
             </div>
             <div class="loja" data-loja="mercadolivre" onclick="filtrarPorLoja('mercadolivre')" role="button" aria-label="Filtrar por Mercado Livre">
-              <img src="logos/mercadolivre.jpg" alt="Logo do Mercado Livre" loading="lazy">
+              <img src="logos/mercadolivre.jpg" alt="Logo do Mercado Livre" loading="lazy" width="100" height="40">
               <span class="mercadolivre">Mercado Livre</span>
             </div>
             <div class="loja" data-loja="alibaba" onclick="filtrarPorLoja('alibaba')" role="button" aria-label="Filtrar por Alibaba">
-              <img src="logos/alibaba.png" alt="Logo da Alibaba" loading="lazy">
+              <img src="logos/alibaba.png" alt="Logo da Alibaba" loading="lazy" width="100" height="40">
               <span class="alibaba">Alibaba</span>
             </div>
           </div>
         </div>
-        <input type="text" id="busca" placeholder="Busque por produtos..." class="barra-busca" aria-label="Buscar produtos" aria-describedby="busca-instrucao">
-        <span id="busca-instrucao" style="display: none;">Digite o nome do produto para filtrar os resultados.</span>
-        <div id="busca-feedback" class="busca-feedback">Buscando...</div>
+        <input type="text" id="busca" placeholder="Busque por produtos..." class="barra-busca" aria-label="Buscar produtos">
+        <span id="busca-instrucao" class="sr-only">Digite o nome do produto para filtrar os resultados.</span>
+        <div class="busca-feedback" id="busca-feedback">Buscando...</div>
         <div class="loading-spinner" id="loading-spinner"></div>
         <div class="grid-lojas" id="grid-produtos"></div>
         <p class="mensagem-vazia" id="mensagem-vazia">Nenhum produto encontrado.</p>
@@ -216,25 +138,25 @@
       <div class="social-links">
         <a href="https://www.tiktok.com/@cdc.centraldecompas?_t=ZM-8vYQlF9u1dH&_r=1" target="_blank">
           <div class="icon">
-            <img src="logos/tiktok.png" alt="Ícone do TikTok" loading="lazy">
+            <img src="logos/tiktok.png" alt="Ícone do TikTok" loading="lazy" width="24" height="24">
           </div>
           <span>TikTok</span>
         </a>
         <a href="https://www.instagram.com/cdccentrodecompras/?utm_source=qr&r=nametag" target="_blank">
           <div class="icon">
-            <img src="logos/Instagram.png" alt="Ícone do Instagram" loading="lazy">
+            <img src="logos/Instagram.png" alt="Ícone do Instagram" loading="lazy" width="24" height="24">
           </div>
           <span>Instagram</span>
         </a>
         <a href="https://x.com/ComprasCdc" target="_blank">
           <div class="icon">
-            <img src="logos/X.png" alt="Ícone do X" loading="lazy">
+            <img src="logos/X.png" alt="Ícone do X" loading="lazy" width="24" height="24">
           </div>
           <span>X</span>
         </a>
         <a href="https://www.youtube.com/channel/UCaKHlI-hWqwdAXS6Xsv3ZzA" target="_blank">
           <div class="icon">
-            <img src="logos/youtube.png" alt="Ícone do YouTube" loading="lazy">
+            <img src="logos/youtube.png" alt="Ícone do YouTube" loading="lazy" width="24" height="24">
           </div>
           <span>YouTube</span>
         </a>
@@ -253,12 +175,12 @@
   </div>
 
   <footer>
-    <p>🔧 Todos os direitos reservados <strong>Grupo Centro de Compra "CdC"</strong> © <span id="year"></span></p>
+    <p>🔧 Todos os direitos reservados <strong>Grupo CentrodeCompra "CdC"</strong> © <span id="year"></span></p>
   </footer>
 
   <div class="robo-assistente">
     <a href="https://wa.me/5521975179737" target="_blank">
-      <img src="imagens/robo.jpg" alt="Robô Assistente" class="robo-imagem">
+      <img src="imagens/robo.jpg" alt="Robô Assistente" class="robo-imagem" width="80" height="80">
       <div class="robo-texto">Posso ajudar?</div>
     </a>
   </div>
