--- a/index.html
+++ b/index.html
@@ -128,9 +128,24 @@
       margin: 0 10px;
     }
     .ad-container {
+      margin: 10px auto; /* Reduzido de 20px para 10px */
       max-width: 300px;
-      margin: 20px auto;
       text-align: center;
+    }
+    .lojas-parceiras {
+      margin-bottom: 10px; /* Reduzido para minimizar espaço */
+    }
+    #busca {
+      margin-bottom: 10px; /* Adicionado para controlar espaço após a barra de busca */
+    }
+    #grid-produtos {
+      margin-top: 10px; /* Reduzido para aproximar os produtos */
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+      gap: 20px;
+    }
+    #ofertas-section {
+      padding: 10px 0; /* Reduzido para diminuir espaço interno */
     }
   </style>
 </head>
