--- a/cupom.html
+++ b/cupom.html
@@ -76,12 +76,12 @@
   <script>
     // Array de cupons (pode ser atualizado facilmente)
     const cupons = [
-      { id: 'cupom1', loja: 'Amazon', codigo: 'AMZ10OFF', imagem: 'logos/amazon.png' },
-      { id: 'cupom2', loja: 'Shein', codigo: 'SHEIN20', imagem: 'logos/shein.png' },
-      { id: 'cupom3', loja: 'Magalu', codigo: 'MAGALU15', imagem: 'logos/magalu.png' },
-      { id: 'cupom4', loja: 'Mercado Livre', codigo: 'ML10', imagem: 'logos/mercadolivre.jpg' },
-      { id: 'cupom5', loja: 'Shopee', codigo: 'SHOPEE5', imagem: 'logos/shopee.png' },
-      { id: 'cupom6', loja: 'AliExpress', codigo: 'ALI20', imagem: 'logos/aliexpress.png' },
+      { id: 'cupom1', loja: 'Amazon', codigo: 'carregando', imagem: 'logos/amazon.png' },
+      { id: 'cupom2', loja: 'Shein', codigo: 'carregando', imagem: 'logos/shein.png' },
+      { id: 'cupom3', loja: 'Magalu', codigo: 'carregando', imagem: 'logos/magalu.png' },
+      { id: 'cupom4', loja: 'Mercado Livre', codigo: 'carregando', imagem: 'logos/mercadolivre.jpg' },
+      { id: 'cupom5', loja: 'Shopee', codigo: 'carregando', imagem: 'logos/shopee.png' },
+      { id: 'cupom6', loja: 'AliExpress', codigo: 'carregando', imagem: 'logos/aliexpress.png' },
       // Adicione mais cupons aqui, por exemplo:
       // { id: 'cupom7', loja: 'Nova Loja', codigo: 'NOVA10', imagem: 'logos/novaloja.png' }
     ];
